Tested with JDK8